--- a/content/fi/news/2015-07-27-2.0.0-rc1-released.md
+++ b/content/fi/news/2015-07-27-2.0.0-rc1-released.md
@@ -5,12 +5,12 @@ author: Quintus
 translator: xet7
 ---
 
-Secret Chronicles of Dr. M. (TSC) pelin ensimmäinen julkaisuehdokas (RC1)
-tulevasta 2.0.0 versiosta on julkaistu tänään.
-
-Olemme ylpeitä voidessamme ilmoittaa ensimmäisestä julkaisuehdokkaasta
-tulevalle 2.0.0 julkaisulle, 2.0.0-rc1. Beta8:n jälkeen on tullut vain
-yksi merkittävä muutos, joka oli korjaus ongelmaan [#431][1].
+> ### Secret Chronicles of Dr. M. (TSC) pelin ensimmäinen julkaisuehdokas (RC1) tulevasta 2.0.0 versiosta on julkaistu tänään.
+>
+> Olemme ylpeitä voidessamme ilmoittaa ensimmäisestä julkaisuehdokkaasta
+> tulevalle 2.0.0 julkaisulle, 2.0.0-rc1. Beta8:n jälkeen on tullut vain
+> yksi merkittävä muutos, joka oli korjaus ongelmaan [#431][1].
+{: .summary}
 
 RC vaihe on viimeinen julkaisuprosessissa ennen lopullista
 julkaisua. Tulemme huolellisesti seuraamaan uusia bugiseuranta ongelmia
