--- a/content/en/news/2015-07-27-2.0.0-rc1-released.md
+++ b/content/en/news/2015-07-27-2.0.0-rc1-released.md
@@ -3,14 +3,12 @@ title: TSC 2.0.0-rc1 has been released
 date: 2015-07-27
 author: Quintus
 translator:
+summary: The first release candidate (RC1) of the upcoming 2.0.0 version of The Secret Chronicles of Dr. M. (TSC) has been released today.
 ---
 
-> ### The first release candidate (RC1) of the upcoming 2.0.0 version of The Secret Chronicles of Dr. M. (TSC) has been released today.
->
-> We are proud to announce the release of the first release candidate
-> for the upcoming 2.0.0 release, 2.0.0-rc1. There has only been one
-> major change since beta8, which was the fix of bug [#431][1].
-{: .summary}
+We are proud to announce the release of the first release candidate
+for the upcoming 2.0.0 release, 2.0.0-rc1. There has only been one
+major change since beta8, which was the fix of bug [#431][1].
 
 The RC phase is the last phase in the release process before the final
 release. We will be cautiously watching the issue tracker for any new
