Mention crosscompilation facility in 2.0.0 release post.

--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -27,6 +27,10 @@ alexandria, our server. So, what has changed?
   complete Finnish and German translation. Note that not all the
   strings are translatable yet, though, so you’ll still see some
   English.
+* The ten year old C++ codebase was reworked largely. The code is now
+  more clean, and it is possible to build the Windows version by
+  crosscompilation from Linux without needing access to Microsoft’s proprietary
+  compiler.
 * Compiling people will enjoy that the dependency on CEGUI’s
   NullRenderer was removed. Also, the entire build system was changed
   to cmake, and CEGUI is compiled in statically if the old version we
