Make smc-get mention more clear in 2.0.0 release post.

--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -54,7 +54,7 @@ without whom there would be no TSC today. It was him who convinced me
 be a future to this game. Till today, he has supported me as the
 assistant lead of the TSC project in various adminsitrative tasks, and
 continues to be an important part of TSC. He will certainly remember
-the efforts we both put into the now obsolete `smc-get` program...
+how we got in touch when working on the now obsolete `smc-get` program...
 
 Anyway, I forked the SMC sourcecode from its GitHub repository and
 implemented several new features and fixed some longer standing
