Include @datahead8888’s suggestions into 2.0.0 release post

--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -16,8 +16,12 @@ alexandria, our server. So, what has changed?
 
 * The game now contains a very powerful scripting engine in mruby, a
   minimal implementation of the Ruby programming language. It allows
-  you to do nearly everything imaginable as a level author.
-* New enemies: Larry the bomb and Pip the worm.
+  you to do nearly everything imaginable as a level author. Most
+  prominently it allows to create switches that can have arbitrary
+  effects.
+* New enemies: Larry the bomb, Pip the worm, and the Beetle Barrage.
+* Movable crates were added as a new dynamic game object that may be
+  involved in certain obstacles.
 * All Mario-inspired music and most of the Mario-inspired graphics are
   gone. Especially all the powerup graphics have been exchanged.
 * Several new pieces of music have been added.
