Fix type of studies in 2.0.0 release post

--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -93,7 +93,7 @@ better for the next releases. However, before I show you the links, I
 think this is the place to say thank you also to those persons that I
 did not already mention. Let me say thank you to Chris Jacobsen
 (_datahead_) for his sustained support in development albeit he was
-under time pressure for his Master’s Thesis, thank you to Brian
+under time pressure for his graduate studies, thank you to Brian
 Vanderburg II (_simpletoon_), who contributed probably the most code
 to TSC after me, and thank you to the earliest tester of the game,
 Justin Rissler (_DarkAceZ_). Thank you to Sydney Dykstra (_sydneyjd_)
