Mention @FluXy’s nickname in 2.0.0 release post.

--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -45,20 +45,21 @@ alexandria, our server. So, what has changed?
 
 Before the advent of The Secret Chronicles of Dr. M. the Secretmaryo
 project (Secret Maryo Chronicles, SMC) was basically dead. Its former
-lead developer, Florian Richter, abandoned it about the year 2012. The
-once active forums grew more and more empty, were invaded by armies of
-spambots, and only few users still checked them when I took up the
-project in 2013. First I just wanted to contribute the long requested
-scripting engine, but after I posted its first version (then written
-in Lua) I soon realised that if I just leave it there, nobody would
-pick it up. Earlier I had come into contact with the former SMC
+lead developer, Florian Richter (_FluXy_), abandoned it about the year
+2012. The once active forums grew more and more empty, were invaded by
+armies of spambots, and only few users still checked them when I took
+up the project in 2013. First I just wanted to contribute the long
+requested scripting engine, but after I posted its first version (then
+written in Lua) I soon realised that if I just leave it there, nobody
+would pick it up. Earlier I had come into contact with the former SMC
 assistant lead, _Luiji_, to whom I express my special gratitude, and
 without whom there would be no TSC today. It was him who convinced me
 (probably he did not even realise that role himself) that there must
 be a future to this game. Till today, he has supported me as the
 assistant lead of the TSC project in various adminsitrative tasks, and
 continues to be an important part of TSC. He will certainly remember
-how we got in touch when working on the now obsolete `smc-get` program...
+how we got in touch when working on the now obsolete `smc-get`
+program...
 
 Anyway, I forked the SMC sourcecode from its GitHub repository and
 implemented several new features and fixed some longer standing
