--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -3,7 +3,7 @@ title: TSC 2.0.0 has been released
 date: 2015-08-17
 author: Quintus
 translator:
-summary: "Stable version 2.0.0 of TSC has been released today."
+summary: Stable version 2.0.0 of TSC has been released today.
 ---
 
 The TSC development team is proud to announce that exactly six years
@@ -79,7 +79,7 @@ been much more difficult to manage the process.
 
 With more and more features added, and more people joining the
 efforts, we came to the conclusion that while we enjoy the game of
-SMC, we need a different goal. SMC to a large extend was still a Mario
+SMC, we need a different goal. SMC to a large extent was still a Mario
 clone, with different graphics, but with the game mechanics only very
 slightly changed. It was widely recognised as such. In a [long and
 heated discussion][2] we decided to rename the project to “The Secret
