Refinements to release text. (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -7,7 +7,7 @@ summary: Vakaa versio 2.0.0 TSC pelistä on julkaistu tänään.
 ---
 
 TSC kehitystiimi on ylpeä voidessaan ilmoittaa että täsmälleen kuusi
-vuotta jälkeen edellisen SMC julkaisun, 1.9, kaksi vuotta sitten kun minä, Marvin
+vuotta edellisen SMC julkaisun 1.9 jälkeen, kaksi vuotta sitten kun minä, Marvin
 Gülker nimimerkillä _Quintus_, haaroitin pelin uudelle nimelle TSC,
 kuukausien kehityksen ja useiden takaiskujen jälkeen, lopulta uusi vakaa
 versio 2.0.0 on julkaistu tänään. Kirjoittaessani tätä, lähdekoodi
