Refinements to release text, 2. (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -66,7 +66,7 @@ aikaan jonkinverran kiinnostusta siellä. Ajan mittaan, jotkin vanhoista
 käyttäjistä palasivat ja rohkaisivat minua edelleen, joten jonkin ajan jälkeen
 päätin että roolini SMC projektissa ei tule olla vain väliaikainen
 (aikaisimmat commitit TSC repossa listaavat minut “väliaikaisena projektin
-vetäjänä” tekijät listassa). Oletin roolikseni projektin vetäjä;
+vetäjänä” tekijät listassa). Oletin roolini projektin vetäjäksi;
 muutamien enemmän tai vähemmän menestyksekkäiden yritysten jälkeen ottaa yhteyttä
 Mr. Richteriin, päätettiin julistaa TSC virallisesti haarautuneeksi
 SMC projektista. Saksalaisesta yrityksestä [First Root UG][1] löysimme
