--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -81,7 +81,7 @@ SMC pelistä, tarvitsemme eri tavoitteen. SMC enimmäkseen oli yhä Mario
 klooni, eri grafiikoilla, mutta pelimekaniikaltaan vain hieman muutettuna.
 Se oli laajalti tunnistettu sellaisena. [Pitkässä ja kiivaassa
 keskustelussa][2] päätimme nimetä uudelleen projektin nimelle “The Secret
-Chronicles of Dr. M.” ja yrittää poista Mariomaisuudet grafiikassa ja
+Chronicles of Dr. M.” ja yrittää poistaa Mariomaisuudet grafiikassa ja
 pelitoiminnoissa. Vaikka tämä jatkuva työ on kaukana päätöksestä,
 aikaisimmat tulokset ovat jo näkyvissä nyt julkaistussa 2.0.0 vakaassa
 versiossa.
