Fix typo.2 (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -90,7 +90,7 @@ Johtuen erinäisistä bugeista ja ulkoisista tekijöistä, 2.0.0 julkaisu
 viivästyi noin yhden vuoden suunnitellusta julkaista. Vaikka
 ajankäyttömme ilmeisesti on ollut epätyydyttävää, lupaamme tehdä
 paremmin seuraavissa julkaisuissa. Kuitenkin, ennen kun näytän teille
-linkit, ajattelen että on aika sanoa kiitoksia myös niille henkilöille
+linkit, ajattelen että on aika sanoa kiitokset myös niille henkilöille
 joita en jo maininnut. Sallikaa minun sanoa kiitos Chris Jacobsen
 (_datahead_) hänen jatkuvasta tuestaan kehityksessä vaikka hänellä
 oli kiireitä hänen opinnoissaan, kiitos Brian Vanderburg II
@@ -102,9 +102,9 @@ ja palvelin ylläpitoon, ja kiitos _Bugsbane_ kun tarjosit peliin
 korvaamattoman arvokasta taidettasi. Kiitos Arik Burns (_aakburns_)
 useista musiikkikappaleista, kuten myös Johan Brod (_jobromedia_).
 Kiitos Lauri Ojansivu (_xet7_), joka teki ensimmäisen käännöksen pelistä
-ulkomaiselle kielelle (suomi) ja joka kirjoitti ja ylläpitää tätä
+ulkomaiselle kielelle (suomi) ja joka teki ja ylläpitää tätä
 nettisivustoa. Lisäksi mukana oli apua monilta muilta henkilöiltä,
-ja en pysty luettelemaan niitä kaikkia. Kiitos teille kaikille!
+ja en pysty luettelemaan niitä kaikkia. Kiitoksia teille kaikille!
 
 Joten, pitemmittä puheitta, tässä on imurointi linkit **lopulliseen
 vakaaseen versioon 2.0.0**, jotka tulevat käyttöön kun lähetys palvelimelle
