Fix typo.2 (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -104,7 +104,7 @@ useista musiikkikappaleista, kuten myös Johan Brod (_jobromedia_).
 Kiitos Lauri Ojansivu (_xet7_), joka teki ensimmäisen käännöksen pelistä
 ulkomaiselle kielelle (suomi) ja joka teki ja ylläpitää tätä
 nettisivustoa. Lisäksi mukana oli apua monilta muilta henkilöiltä,
-ja en pysty luettelemaan niitä kaikkia. Kiitoksia teille kaikille!
+joita kaikkia en pysty tässä tarkasti luettelemaan. Kiitoksia teille kaikille!
 
 Joten, pitemmittä puheitta, tässä on imurointi linkit **lopulliseen
 vakaaseen versioon 2.0.0**, jotka tulevat käyttöön kun lähetys palvelimelle
