Translate rest of text (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -111,9 +111,9 @@ vakaaseen versioon 2.0.0**, jotka tulevat käyttöön kun lähetys palvelimelle
 on valmistunut:
 
 * [Lähdekoodi][3] (MD5: 54688db473103299d867b0e52c39f51e, [GPG
-  signature][4])
+  allekirjoitus][4])
 * [Windows asennusohjelma][5] (MD5: e20d66fdf171e0b6d5f065803fcfcd02), [GPG
-  signature][6])
+  allekirjoitus][6])
 
 Marvin Gülker (_Quintus_)<br/>
 TSC kehitystiimin puolesta.
