Translation fix (fi)

--- a/content/fi/news/2015-08-17-2.0.0-released.md
+++ b/content/fi/news/2015-08-17-2.0.0-released.md
@@ -102,7 +102,7 @@ ja palvelin ylläpitoon, ja kiitos _Bugsbane_ kun tarjosit peliin
 korvaamattoman arvokasta taidettasi. Kiitos Arik Burns (_aakburns_)
 useista musiikkikappaleista, kuten myös Johan Brod (_jobromedia_).
 Kiitos Lauri Ojansivu (_xet7_), joka teki ensimmäisen käännöksen pelistä
-ulkomaiselle kielelle (suomi) ja joka teki ja ylläpitää tätä
+ulkomaiselle kielelle (suomi) ja joka kirjoitti ja ylläpitää tätä
 nettisivustoa. Lisäksi mukana oli apua monilta muilta henkilöiltä,
 joita kaikkia en pysty tässä tarkasti luettelemaan. Kiitos teille kaikille!
 
