Fix link to issue #500

--- a/content/fi/news/2016-08-18-2.0.0-wont-compile-linux.md
+++ b/content/fi/news/2016-08-18-2.0.0-wont-compile-linux.md
@@ -11,7 +11,7 @@ niissä jotka ovat kääntäneet ohjelmansa ```-std=c++11``` lipulla, 2.0.0 julk
 tarpallon kääntämisessä on ongelmia. Valitettavast, julkaisimme version 2.0.0 juuri
 ennen kuin useimmat distrot tekivät muutoksen.
 
-On myös ollut ongelma #500 pelin latautuessa mustaan ruutuun kääntäessä CEGUI
+On myös ollut [ongelma #500 pelin latautuessa mustaan ruutuun][2] kääntäessä CEGUI
 versiolla 0.7.9.
 
 Olemme korjanneet nämä ongelmat ja monia muita TSC:n Devel haarassa, ja myös korjanneet
@@ -23,3 +23,4 @@ TSC tiimin puolesta
 
 
 [1]: http://www.secretchronicles.de/fi/news/2016/08/17/alpha-builds-available/
+[2]: https://github.com/Secretchronicles/TSC/issues/500
