Fix link to issue #500

--- a/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
+++ b/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
@@ -11,7 +11,7 @@ ones that have compiled their software with the ```-std=c++11``` flag, the 2.0.0
 has problems compiling. Unfortunately, we released version 2.0.0 right before most
 distributions made the change.
 
-There has also been issue #500 with the game loading to a black screen when compiled
+There has also been [issue #500 with the game loading to a black screen][2] when compiled
 with CEGUI 0.7.9.
 
 We have fixed these issues and many more in the Devel branch of TSC, and are also fixed in
@@ -23,3 +23,4 @@ On behalf of the TSC team
 
 
 [1]: http://www.secretchronicles.de/en/news/2016/08/17/alpha-builds-available/
+[2]: https://github.com/Secretchronicles/TSC/issues/500
