Change to relative links.

--- a/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
+++ b/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
@@ -22,5 +22,5 @@ our [alpha][1] builds(which are based on the Devel branch), so feel free to test
 On behalf of the TSC team
 
 
-[1]: http://www.secretchronicles.de/en/news/2016/08/17/alpha-builds-available/
+[1]: /en/news/2016/08/17/alpha-builds-available/
 [2]: https://github.com/Secretchronicles/TSC/issues/500
