--- a/content/fi/news/2016-08-18-2.0.0-wont-compile-linux.md
+++ b/content/fi/news/2016-08-18-2.0.0-wont-compile-linux.md
@@ -22,5 +22,5 @@ peliä, ja ilmoittaa meille jos löydät jotain ongelmia.
 TSC tiimin puolesta
 
 
-[1]: http://www.secretchronicles.de/fi/news/2016/08/17/alpha-builds-available/
+[1]: /fi/news/2016/08/17/alpha-builds-available/
 [2]: https://github.com/Secretchronicles/TSC/issues/500
