--- a/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
+++ b/content/en/news/2016-08-18-2.0.0-wont-compile-linux.md
@@ -3,7 +3,7 @@ title: 2.0.0 Compile issues on Linux
 date: 2016-08-18
 author: Sydney
 translator:
-summary: TSC 2.0.0 wont compile on most Linux distributions
+summary: TSC 2.0.0 won't compile on most Linux distributions
 ---
 
 As many people have been bringing to our attention, on most modern distributions, or
