http to https, .de to .org

--- a/content/en/news/2015-07-27-2.0.0-rc1-released.md
+++ b/content/en/news/2015-07-27-2.0.0-rc1-released.md
@@ -34,7 +34,7 @@ Marvin Gülker (_Quintus_)<br/>
 On behalf of the TSC development team.
 
 [1]: https://github.com/Secretchronicles/TSC/issues/431
-[2]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-rc1.tar.xz
-[3]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-rc1.tar.xz.sig
-[4]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-rc1-win32.exe
-[5]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-rc1-win32.exe.sig
+[2]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-rc1.tar.xz
+[3]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-rc1.tar.xz.sig
+[4]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-rc1-win32.exe
+[5]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-rc1-win32.exe.sig
