--- a/content/en/news/2015-08-17-2.0.0-released.md
+++ b/content/en/news/2015-08-17-2.0.0-released.md
@@ -123,7 +123,7 @@ On behalf of the TSC development team.
 
 [1]: http://www.first-root.com
 [2]: https://github.com/Secretchronicles/TSC/issues/92
-[3]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0.tar.xz
-[4]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0.tar.xz.sig
-[5]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-win32.exe
-[6]: ftp://ftp.secretchronicles.de/releases/TSC-2.0.0-win32.exe.sig
+[3]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0.tar.xz
+[4]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0.tar.xz.sig
+[5]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-win32.exe
+[6]: ftp://ftp.secretchronicles.org/releases/TSC-2.0.0-win32.exe.sig
