Add new Ubuntu 18.04 Package

--- a/content/en/news/2019-03-10-Ubuntu-18.04-Alpha-Packages.md
+++ b/content/en/news/2019-03-10-Ubuntu-18.04-Alpha-Packages.md
@@ -22,7 +22,7 @@ Then run:
 sudo apt install ./tsc_2.1.0+packagename.deb
 ~~~~~~~~~~~~~~~~~~~~~
 
-Apt will take care of the installation and all required dependencies. After the install is finished you can launch TSC through the  
+Apt will take care of the installation and all required dependencies. After the install is finished you can launch TSC through the<br>
 new `The Secret Chronicles of Dr. M.` entry in your application menu or by running the `tsc` command in your terminal.
 
 NOTE: You must use apt, not apt-get to install the package, as the older apt-get cannot deal
