Fix links to Finnish download page development version.

--- a/content/fi/news/2019-03-10-Ubuntu-18.04-Alpha-Packages.md
+++ b/content/fi/news/2019-03-10-Ubuntu-18.04-Alpha-Packages.md
@@ -30,4 +30,4 @@ HUOM: Sinun täytää käyttää apt, ei apt-get komentoa asentaaksesi paketin, 
 asentamaan .deb-pakettia ja kaikkia sen riippuvuuksia käyttäjän kotikansioista. Voit myös käyttää
 `dpkg -i` asentaaksesi paketin, ja sitten suorittaa `apt-get install -f` korjataksesi riippuvuudet.
 
-[1]: /fi/download/#development-version
+[1]: /fi/download/#kehitys-versio
