--- a/content/en/news/2019-12-23-tsc-2.1.0-beta1.md
+++ b/content/en/news/2019-12-23-tsc-2.1.0-beta1.md
@@ -100,22 +100,24 @@ work on levels that implement parts of the aforementioned story draft.
 
 * [Installer for 64-bit Windows 7 or later](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win64.exe)
   ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win64.md5sum),
-  [SHA1](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win64.sha256sum))
+  [SHA256](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win64.sha256sum))
 * [Installer for 32-bit Windows 7 or later](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win32.exe)
   ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win32.md5sum),
-  [SHA1](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win32.sha256sum))
+  [SHA256](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-win32.sha256sum))
 
 #### Linux
 
-* [amd64 .deb file for Ubuntu/Linux Mint](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-amd64.deb)
+* [amd64 .deb file for Ubuntu 18.04/Linux Mint](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-amd64.deb)
   ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-amd64.md5sum),
-  [SHA1](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-amd64.sha256sum))
-* [armhf .deb file for Ubuntu/Linux Mint](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.deb)
-  ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.md5sum),
-  [SHA1](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.sha256sum))
-* [armhf .deb file for Ubuntu/Linux Mint](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-i386.deb)
+  [SHA256](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-amd64.sha256sum))
+* [i386 .deb file for Ubuntu 18.04/Linux Mint](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-i386.deb)
   ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-i386.md5sum),
-  [SHA1](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-i386.sha256sum))
+  [SHA256](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-i386.sha256sum))
+* [armhf .deb file for Raspbian RasPi3/RasPi4](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.deb)
+  ([MD5](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.md5sum),
+  [SHA256](https://ftp.secretchronicles.org/releases/TSC-2.1.0-beta1-armhf.sha256sum))
+
+
 
 quintus<br/>
 On behalf of the TSC team.
