--- a/content/fi/news/2020-04-02-tsc-2.1.0-rc2.md
+++ b/content/fi/news/2020-04-02-tsc-2.1.0-rc2.md
@@ -1,9 +1,9 @@
 ---
-title: Updated packages for TSC 2.1.0-rc2 released
+title: Päivitetyt paketit TSC 2.1.0-rc2:sta julkaistu
 date: 2020-05-10
 author: xet7
 translator: xet7
-summary: Updated packages for Second Release Candidate of 2.1.0 has been released.
+summary: Päivitetyt paketit toisesta 2.1.0:n julkaisu kandidaatista on julkaistu.
 ---
 
 RC2 julkaisussa oli [puuttuva riippuvuus libboost-chrono][1] joka on nyt
